--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.3"
+    "nuxt": "3.0.0-rc.3",
+    "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^2.4.0",
     "@pinia/nuxt": "^0.1.9",
     "autoprefixer": "10.4.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.13",
     "contentful": "^9.1.29",
-    "pinia": "^2.0.14",
-    "vue-gtag-next": "^1.14.0"
+    "pinia": "^2.0.14"
   }
 }
