--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.3",
+    "typescript": "^4.7.2",
     "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
