--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.3",
-    "typescript": "^4.7.2",
     "vue-gtag-next": "^1.14.0"
   },
   "dependencies": {
@@ -19,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.13",
     "contentful": "^9.1.29",
-    "pinia": "^2.0.14"
+    "pinia": "^2.0.14",
+    "typescript": "^4.7.2"
   }
 }
