--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.1.3",
     "nuxt": "3.0.0-rc.3",
     "vue-gtag-next": "^1.14.0"
   },
